feat(bpmn): implement activeTasksCollection for Ad-Hoc Sub-Processes and update related tests